# LibraryCreation-Python

calculator_project/: LICENCE.txt  README.md  pyproject.toml
calculator_project/Tests/: test_calc.py
calculator_project/src/calculator_vw/: calculator.py
calculator_project/src/calculator_vw.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
