[project]
name = "calculator_vw"
version = "0.0.1"
authors = [
  { name="Vera van der Wel", email="veravdwel@gmail.com" },
]
description = "A basic calculator"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]